fhirmini: native FHIR server + HL7v2 integration engine + on-device MLX AI for Apple Silicon
- HAPI FHIR R4 run natively (no Docker) on tuned Postgres 16 (p50 ~2.8ms reads)
- Mirth-class integration engine: MLLP/HL7v2 + HTTP + S3 in -> FHIR/S3/HTTP/MLLP out,
  durable Postgres ledger, retries, replay, ACK generation
- MLX AI sidecar: on-device embeddings semantic search, RAG Q&A, free-text->FHIR
- One-shot bootstrap, unified control tool, launchd templates, smoke test, CI

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>